// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SqlStatementFormController matches snapshot with different SQL mode and data sources 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-segmented basic-segmented-wrapper css-192b3m1 ant-segmented-block"
      style="margin-bottom: 16px;"
    >
      <div
        class="ant-segmented-group"
      >
        <label
          class="ant-segmented-item"
        >
          <input
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="mysql-1-test"
          >
            mysql-1-test
          </div>
        </label>
        <label
          class="ant-segmented-item ant-segmented-item-selected"
        >
          <input
            checked=""
            class="ant-segmented-item-input"
            type="radio"
          />
          <div
            class="ant-segmented-item-label"
            title="mysql-2"
          >
            mysql-2
          </div>
        </label>
      </div>
    </div>
    <div
      hidden=""
    >
      <div
        class="ant-form-item form-item-label-mb-16 css-1jlm9cy"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              title=""
            >
              <svg
                class="custom-icon-ellipse"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#E8F3FF"
                  height="16"
                  rx="3"
                  width="16"
                />
                <circle
                  cx="8"
                  cy="8"
                  fill="#fff"
                  r="3"
                  stroke="#4583FF"
                  stroke-width="2"
                />
              </svg>
              <span>
                选择SQL语句上传方式
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="1_currentUploadType"
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-row actiontech-mode-switcher"
                  id="1_currentUploadType"
                  style="margin-left: -6px; margin-right: -6px;"
                >
                  <div
                    class="ant-col ant-col-8"
                    style="padding-left: 6px; padding-right: 6px;"
                  >
                    <div
                      class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                    >
                      <span
                        class="actiontech-mode-switcher-item-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="actiontech-mode-switcher-item-text"
                      >
                        输入SQL语句
                      </span>
                      <div
                        class="active-icon-wrapper"
                      >
                        <span
                          class="icon-mode-switcher-checked active-icon"
                        >
                          <svg
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="Frame"
                            >
                              <path
                                d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                id="Vector"
                                stroke="#FCFBF9"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-8"
                    style="padding-left: 6px; padding-right: 6px;"
                  >
                    <div
                      class="actiontech-mode-switcher-item css-klzra6"
                    >
                      <span
                        class="actiontech-mode-switcher-item-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="actiontech-mode-switcher-item-text"
                      >
                        上传SQL文件
                      </span>
                      <div
                        class="active-icon-wrapper"
                        hidden=""
                      >
                        <span
                          class="icon-mode-switcher-checked active-icon"
                        >
                          <svg
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="Frame"
                            >
                              <path
                                d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                id="Vector"
                                stroke="#FCFBF9"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-8"
                    style="padding-left: 6px; padding-right: 6px;"
                  >
                    <div
                      class="actiontech-mode-switcher-item css-klzra6"
                    >
                      <span
                        class="actiontech-mode-switcher-item-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="actiontech-mode-switcher-item-text"
                      >
                        上传ZIP文件
                      </span>
                      <div
                        class="active-icon-wrapper"
                        hidden=""
                      >
                        <span
                          class="icon-mode-switcher-checked active-icon"
                        >
                          <svg
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="Frame"
                            >
                              <path
                                d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                id="Vector"
                                stroke="#FCFBF9"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
      >
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="1_form_data"
                title=""
              />
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="custom-monaco-editor-wrapper css-1esok7i"
                  >
                    <input
                      aria-required="true"
                      class="custom-monaco-editor"
                      height="400px"
                      id="1_form_data"
                      language="sql"
                      options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                      value="/* input your sql */"
                      width="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <button
                      class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        审 核
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            SQL美化
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          aria-label="info-circle"
                          class="anticon anticon-info-circle tooltips-default-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="info-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                            />
                            <path
                              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-form-item form-item-label-mb-16 css-1jlm9cy"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              title=""
            >
              <svg
                class="custom-icon-ellipse"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#E8F3FF"
                  height="16"
                  rx="3"
                  width="16"
                />
                <circle
                  cx="8"
                  cy="8"
                  fill="#fff"
                  r="3"
                  stroke="#4583FF"
                  stroke-width="2"
                />
              </svg>
              <span>
                选择SQL语句上传方式
              </span>
            </label>
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              for="2_currentUploadType"
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-row actiontech-mode-switcher"
                  id="2_currentUploadType"
                  style="margin-left: -6px; margin-right: -6px;"
                >
                  <div
                    class="ant-col ant-col-8"
                    style="padding-left: 6px; padding-right: 6px;"
                  >
                    <div
                      class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                    >
                      <span
                        class="actiontech-mode-switcher-item-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="actiontech-mode-switcher-item-text"
                      >
                        输入SQL语句
                      </span>
                      <div
                        class="active-icon-wrapper"
                      >
                        <span
                          class="icon-mode-switcher-checked active-icon"
                        >
                          <svg
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="Frame"
                            >
                              <path
                                d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                id="Vector"
                                stroke="#FCFBF9"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-8"
                    style="padding-left: 6px; padding-right: 6px;"
                  >
                    <div
                      class="actiontech-mode-switcher-item css-klzra6"
                    >
                      <span
                        class="actiontech-mode-switcher-item-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="actiontech-mode-switcher-item-text"
                      >
                        上传SQL文件
                      </span>
                      <div
                        class="active-icon-wrapper"
                        hidden=""
                      >
                        <span
                          class="icon-mode-switcher-checked active-icon"
                        >
                          <svg
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="Frame"
                            >
                              <path
                                d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                id="Vector"
                                stroke="#FCFBF9"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-8"
                    style="padding-left: 6px; padding-right: 6px;"
                  >
                    <div
                      class="actiontech-mode-switcher-item css-klzra6"
                    >
                      <span
                        class="actiontech-mode-switcher-item-icon"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="actiontech-mode-switcher-item-text"
                      >
                        上传ZIP文件
                      </span>
                      <div
                        class="active-icon-wrapper"
                        hidden=""
                      >
                        <span
                          class="icon-mode-switcher-checked active-icon"
                        >
                          <svg
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="Frame"
                            >
                              <path
                                d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                id="Vector"
                                stroke="#FCFBF9"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </g>
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
      >
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="2_form_data"
                title=""
              />
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="custom-monaco-editor-wrapper css-1esok7i"
                  >
                    <input
                      aria-required="true"
                      class="custom-monaco-editor"
                      height="400px"
                      id="2_form_data"
                      language="sql"
                      options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                      value="/* input your sql */"
                      width="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class=""
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <button
                      class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        审 核
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            SQL美化
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <span
                          aria-label="info-circle"
                          class="anticon anticon-info-circle tooltips-default-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="info-circle"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                            />
                            <path
                              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`test SqlStatementFormController matches snapshot with different SQL mode and no data sources 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-empty ant-empty-normal"
    >
      <div
        class="ant-empty-image"
      >
        <svg
          height="41"
          viewBox="0 0 64 41"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            transform="translate(0 1)"
          >
            <ellipse
              cx="32"
              cy="33"
              fill="#f5f5f5"
              rx="32"
              ry="7"
            />
            <g
              fill-rule="nonzero"
              stroke="#d9d9d9"
            >
              <path
                d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
              />
              <path
                d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                fill="#fafafa"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="ant-empty-description"
      >
        请添加数据源
      </div>
    </div>
  </form>
</div>
`;

exports[`test SqlStatementFormController matches snapshot with same SQL mode enabled 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-form-item form-item-label-mb-16 css-1jlm9cy"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title=""
          >
            <svg
              class="custom-icon-ellipse"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#E8F3FF"
                height="16"
                rx="3"
                width="16"
              />
              <circle
                cx="8"
                cy="8"
                fill="#fff"
                r="3"
                stroke="#4583FF"
                stroke-width="2"
              />
            </svg>
            <span>
              选择SQL语句上传方式
            </span>
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            for="0_currentUploadType"
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-row actiontech-mode-switcher"
                id="0_currentUploadType"
                style="margin-left: -6px; margin-right: -6px;"
              >
                <div
                  class="ant-col ant-col-8"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 7.5H3v6.75h12zM2.25 2.25h13.5a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75m1.5 2.25V6h1.5V4.5zm3 0V6h1.5V4.5zm-3 3.75H6V12H3.75z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      输入SQL语句
                    </span>
                    <div
                      class="active-icon-wrapper"
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      上传SQL文件
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-8"
                  style="padding-left: 6px; padding-right: 6px;"
                >
                  <div
                    class="actiontech-mode-switcher-item css-klzra6"
                  >
                    <span
                      class="actiontech-mode-switcher-item-icon"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 18 18"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m12 1.5 3.75 3.75v10.506a.745.745 0 0 1-.745.744H2.995a.75.75 0 0 1-.745-.744V2.244c0-.411.334-.744.745-.744zM9.75 9H12L9 6 6 9h2.25v3h1.5z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="actiontech-mode-switcher-item-text"
                    >
                      上传ZIP文件
                    </span>
                    <div
                      class="active-icon-wrapper"
                      hidden=""
                    >
                      <span
                        class="icon-mode-switcher-checked active-icon"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            id="Frame"
                          >
                            <path
                              d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                              id="Vector"
                              stroke="#FCFBF9"
                              stroke-linejoin="round"
                              stroke-width="1.5"
                            />
                          </g>
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
    >
      <div
        class="ant-form-item css-15d6abf"
      >
        <div
          class="ant-row ant-form-item-row"
        >
          <div
            class="ant-col ant-form-item-label"
          >
            <label
              class="ant-form-item-required"
              for="0_form_data"
              title=""
            />
          </div>
          <div
            class="ant-col ant-form-item-control"
          >
            <div
              class="ant-form-item-control-input"
            >
              <div
                class="ant-form-item-control-input-content"
              >
                <div
                  class="custom-monaco-editor-wrapper css-1esok7i"
                >
                  <input
                    aria-required="true"
                    class="custom-monaco-editor"
                    height="400px"
                    id="0_form_data"
                    language="sql"
                    options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                    value="/* input your sql */"
                    width="100%"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-form-item css-15d6abf"
    >
      <div
        class="ant-row ant-form-item-row"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title=""
          />
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 12px;"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      审 核
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          SQL美化
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="info-circle"
                        class="anticon anticon-info-circle tooltips-default-icon"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="info-circle"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                          />
                          <path
                            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
